değerler sayfası footer düzeltildi.

--- a/src/Components/Pages/Kurumsal/DegerlerStyle.css
+++ b/src/Components/Pages/Kurumsal/DegerlerStyle.css
@@ -2,94 +2,53 @@
   font-family: "Sofia Pro", sans-serif;
 }
 
-#degerHeader,
+#degerHeader{
+  text-align: center;
+  align-content: center;
+  color: #4abeca;
+  font-size: 40px;
+  padding-top: 30%;
+}
+
 #motivasyonHeader {
   text-align: center;
   align-content: center;
   color: #4abeca;
   font-size: 40px;
-  font-family: "Sofia Pro", sans-serif;
-
 }
-/* 
-.float-parent-element {
-  width: auto;
-}
-.float-child-element {
-  
-  width: 50%;
 
-} */
-/* .content {
-  margin-left: 5%;
+.content {
   margin-right: 5%;
-} */
+  float:left;
+  
+}
 
 .content2 {
-  margin-right: 5%;
+
+  float:right;
   font-size: 20px;
-  font-family: "Sofia Pro", sans-serif;
-
 }
-
-/* .imageMotivasyon {
-  margin-left: 20%;
-}
-
-.imageDeger {
-  margin-left: 10%;
-  margin-top:12%;
-}
-
-#deger, #motivasyon{
-  border-radius: 20%;
-} */
 
 .degerAnimation{
-  padding-top:5%;
+  padding-top:30%;
+  float:right;
 }
 
-#motivContent,
+#motivContent{
+  background-color: #152039;
+  border-radius: 20%;
+  padding: 10%;
+  color: #f1f2f2;
+  font-size:20px;
+}
+
 #degerContent {
   background-color: #152039;
   border-radius: 20%;
   padding: 10%;
   color: #f1f2f2;
   font-size:20px;
-  font-family: "Sofia Pro", sans-serif;
 
-}
-
-.odinMainContainer
-{
-  width:98%;
-  height:100vh;
-  padding:1%;
-  margin:0;
-  flex-wrap:wrap;
-}
-
-.odinLeftSidebarContainer
-{
-  width:98%;
-  min-width:98%;
-  max-width:98%;
-  height:46.25%;
-  min-height:46.25%;
-  padding:1%;
-  margin:0;
-  
-}
-
-.odinMainContentContainer
-{
-  width:98%;
-  min-width:98%;
-  max-width:98%;
-  height:46.25%;
-  min-height:46.25%;
-  padding:1%;
-  margin-top:20%;
 }
 
 .madde{
@@ -101,4 +60,20 @@
 }
 .tik{
   color:#4abeca;
+}
+
+.motivAnimation{
+  float:left;
+  padding-left:5%;
+}
+
+.momDiv{
+padding-top:5%;
+margin-bottom:20%;
+}
+
+.row{
+
+  width: auto;
+
 }
