--- a/src/Components/Pages/Kurumsal/DegerlerContents/ValMotDesktop.css
+++ b/src/Components/Pages/Kurumsal/DegerlerContents/ValMotDesktop.css
@@ -1,7 +1,3 @@
-*{
-  font-family: "Sofia Pro", sans-serif;
-}
-
 #degerHeader{
   text-align: center;
   align-content: center;
@@ -17,16 +13,19 @@
   font-size: 40px;
 }
 
+.float-child-element{
+  padding-top: 10%;
+}
 .content {
-  margin-right: 5%;
+  margin-right: 10%;
   float:left;
-  
+  text-align:left;
 }
 
 .content2 {
-
   float:right;
   font-size: 20px;
+  text-align:left;
 }
 
 .degerAnimation{
@@ -48,7 +47,6 @@
   padding: 10%;
   color: #f1f2f2;
   font-size:20px;
-
 }
 
 .madde{
@@ -65,6 +63,7 @@
 .motivAnimation{
   float:left;
   padding-left:5%;
+  padding-top:5%;
 }
 
 .momDiv{
@@ -73,7 +72,5 @@ margin-bottom:20%;
 }
 
 .row{
-
   width: auto;
-
 }
