--- a/src/Components/Pages/Iletisim/IletisimDesktop.css
+++ b/src/Components/Pages/Iletisim/IletisimDesktop.css
@@ -1,3 +1,8 @@
+.momDivContectDesktop{
+  padding-top:15%;
+  padding-bottom:10%;
+}
+
 #iletisim {
   color: #4abeca;
   align-items: center;
@@ -23,25 +28,30 @@
 
 }
 
-#box {
+#boxDesktop {
   margin-top: 10%;
   align-items: center;
-  margin-left: 40%;
+  margin-left: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 40%;
+  width: 30%;
   background-color: #f1f2f2;
   color: #152039;
   border-radius: 10%;
   height: 30rem;
   position: relative;
+  padding:5% 0 5% 0;
 }
 #aciklama {
   background-color: #f1f2f2;
   color: #152039;
   padding: 5%;
   border-radius: 10%;
+  font-size: 20px;
+  margin-left:5%;
+  margin-right:5%;
+
 }
 
 .info,
@@ -49,7 +59,6 @@
   color: #152039;
   padding-top: 15%;
 }
-
 .input {
   width: 50%;
   padding-top: 10%;
@@ -93,8 +102,9 @@
 #adres {
   color: #e85a19;
 }
-.animation {
+.animationIletisimDesktop {
   float: left;
-  padding-top: 5%;
+  padding-top: 15%;
+  padding-left:15%;
 
 }
