--- a/src/Components/Pages/Hizmetler/CV.css
+++ b/src/Components/Pages/Hizmetler/CV.css
@@ -96,7 +96,16 @@
   min-height:46.25%;
   padding:1%;
   margin-top:60%;
+}
 
+.row4{
+  width:98%;
+  min-width:98%;
+  max-width:98%;
+  height:46.25%;
+  min-height:46.25%;
+  padding:1%;
+  margin-top:60%;
 }
 
 .prise{
@@ -115,4 +124,43 @@
 
 .prise:hover{
   background-color:#152039;
+}
+
+.sonrakiHizmetLink {
+  background-color: #ff6341;
+  color: #f1f2f2;
+  border-radius: 50px;
+  width:10px;
+  float:right;
+  margin-top:20%;
+  padding-top:2%;
+  padding-bottom:2%;
+  padding-left:2%;
+  padding-right:2%;
+}
+
+.yonlendirmeIleri{
+  margin-left:70%;
+  margin-bottom:0%;
+  width: 20%;
+  background-color:#e85a19;
+  font-size:10px;
+  color:#f1f2f2 !important;
+  text-align: center;
+  padding:2%;
+  border-radius: 10%;
+  font-size:20px;
+}
+
+.yonlendirmeGeri{
+  margin-left:5%;
+  margin-bottom:0%;
+  width: 20%;
+  background-color:#e85a19;
+  font-size:10px;
+  color:#f1f2f2 !important;
+  text-align: center;
+  padding:2%;
+  border-radius: 10%;
+  font-size:20px;
 }
