--- a/src/Components/Pages/Kurumsal/AboutContents/AboutUsDesktop.css
+++ b/src/Components/Pages/Kurumsal/AboutContents/AboutUsDesktop.css
@@ -1,69 +1,34 @@
-/* .aboutDesktopMomDiv{
-  padding-bottom: 10%;
-}
-
-
-
-.float-parent-element {
-  width: auto;
-  margin-left: 5%;
-} */
-/* .float-child-element {
-  float: left;
-  width: 50%;
-  text-align: justify;
-  height: 400px;
-} */
-
-/* .aboutContent {
-  font-size: 20px;
-}
-
-.fullContent {
-  background-color: #f1f2f2;
-  border-radius: 20%;
-  padding: 10%;
-  color: #152039;
-  margin-left: 5%;
-}
-
-.animation {
-  margin-left: 5%;
-  margin-top: 5%;
-}
-.content{
-  padding-top: 10%;
-} */
 #hakkimizdaHeader {
   text-align: center;
   align-content: center;
   color: #4abeca;
   font-size: 40px;
   padding-left:5%;
+  padding-top:7%;
 }
-
+/* 
 .float-child-element{
   padding-top: 10%;
-}
+} */
+
 .content {
   margin-right: 10%;
   float:left;
   text-align:left;
 }
 
-#aboutContent{
-  background-color: #152039;
+.aboutContent{
+  background-color:  #f1f2f2;
   border-radius: 20%;
-  padding: 10%;
-  color: #f1f2f2;
+  /* padding: 10%; */
+  color: #152039;
   font-size:20px;
 }
 
 .momDivAboutDesktop{
-padding-top:5%;
-margin-bottom:35%;
+  margin-bottom:25%;
 }
 
-.aboutAnimation{
+/* .aboutAnimation{
   padding-top:10%;
-}
+} */
