--- a/src/Components/Pages/Kurumsal/Ekibimiz.scss
+++ b/src/Components/Pages/Kurumsal/Ekibimiz.scss
@@ -53,10 +53,10 @@ a, a:hover {
 	// 	font-size: 80%;
 	// }
 
-  .postcard__title {
-    font-size: 35px;
-    padding-left: 3px;
-  }
+  // .postcard__title {
+  //   font-size: 35px;
+  //   padding-left: 3px;
+  // }
 
   .postcard__img {
     max-height: 180px;
@@ -158,12 +158,11 @@ a, a:hover {
 
     &:nth-child(2n+1) .postcard__text::before {
       left: -12px !important;
-      transform: rotate(4deg);
+    
     }
 
     &:nth-child(2n+0) .postcard__text::before {
       right: -12px !important;
-      transform: rotate(-4deg);
     }
   }
 }
