--- a/src/Components/Pages/Iletisim/IletisimMobile.css
+++ b/src/Components/Pages/Iletisim/IletisimMobile.css
@@ -1,6 +1,6 @@
 .momDivContectMobile{
-    padding-top:15%;
-    padding-bottom:10%;
+    padding-top:20%;
+    padding-bottom:5%;
   }
   
   #iletisim {
@@ -12,7 +12,7 @@
     padding-top:3%;
   
   }
-  
+
   #iletisimHeader {
     color: #4abeca;
     align-items: center;
@@ -23,7 +23,7 @@
   }
   
 #boxMobile {
-    margin-top: 10%;
+
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -33,7 +33,7 @@
     border-radius: 10%;
     height: 30rem;
     position: relative;
-    padding:5% 0 5% 0;
+    padding:5% 0 0 0;
     margin-left:20%;
     margin-right:20%;
 
@@ -116,4 +116,9 @@
     color:#ff6341;
   }
   
+  .inputsM{
+    color: #152039;
+    text-align:center;
+    padding-top:5%;
+  }
   
