bitmojiler güncellendi, olan fiyatlar yazıldı

--- a/src/Components/Pages/Kurumsal/AboutContents/AboutUsDesktop.css
+++ b/src/Components/Pages/Kurumsal/AboutContents/AboutUsDesktop.css
@@ -23,12 +23,13 @@
   /* padding: 10%; */
   color: #152039;
   font-size:20px;
+  margin-bottom:4%;
 }
 
 .momDivAboutDesktop{
-  margin-bottom:25%;
+  margin-bottom:30%;
 }
 
-/* .aboutAnimation{
+.aboutAnimation{
   padding-top:10%;
-} */
+}
