--- a/src/Components/Pages/Kurumsal/AboutContents/AboutUsDesktop.css
+++ b/src/Components/Pages/Kurumsal/AboutContents/AboutUsDesktop.css
@@ -14,8 +14,7 @@
 .content {
   margin-right: 10%;
   float:left;
-  text-align:left;
-}
+  text-align: justify;}
 
 .aboutContent{
   background-color:  #f1f2f2;
