--- a/src/Components/Pages/Hizmetler/egitimContent/EgitimMobile.css
+++ b/src/Components/Pages/Hizmetler/egitimContent/EgitimMobile.css
@@ -44,10 +44,10 @@
   padding-bottom:2px;
 }
 
-/* .momDivEgitimM{
+.momDivEgitimM{
 padding-top:15%;
 margin-bottom:5%;
-} */
+} 
 
 .row{
   width: auto;
@@ -65,6 +65,8 @@ margin-bottom:5%;
   padding-top:10%;
   padding-bottom:10%;
   border-radius: 100%;
+  font-size:40px;
+
 }
 
 .coverHeader, .sopHeader{
@@ -73,4 +75,32 @@ margin-bottom:5%;
   color: #4abeca;
   padding-bottom: 5%;
   font-size: 30px;
+}
+
+#butonBizeUlasM {
+
+  background-color: #ff6341;
+  color: #f1f2f2;
+  border: none;
+  outline: none;
+  border-radius: 50px;
+  padding: 10px 10px;
+  width: 100%;
+  font-size:20px;
+  margin-top:5%;
+}
+
+#butonBizeUlasM:hover {
+  color: #f1f2f2;
+  cursor: pointer;
+  text-align: center;
+  background-size: 300% 100%;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  background-image: linear-gradient(to right, #f5ce62 #fa7199, #e85a19);
+  box-shadow: 0 4px 15px 0 rgba(229, 66, 10, 0.75);
+}
+
+#butonBizeUlasM:hover:focus {
+  outline: none;
 }
