--- a/src/Components/Pages/Hizmetler/linkedinContent/LinkedinDesktop.css
+++ b/src/Components/Pages/Hizmetler/linkedinContent/LinkedinDesktop.css
@@ -9,7 +9,7 @@
 .linkedinContentD {
   float: right;
   font-size: 20px;
-  text-align: left;
+  text-align: justify;
   background-color: #f1f2f2;
   border-radius: 20%;
   padding: 10%;
@@ -57,4 +57,5 @@
   padding-top: 10%;
   padding-bottom: 10%;
   border-radius: 100%;
+  font-size:40px;
 }
