--- a/src/Components/Pages/Hizmetler/motivasyonContent/MotivMobile.css
+++ b/src/Components/Pages/Hizmetler/motivasyonContent/MotivMobile.css
@@ -65,6 +65,7 @@ margin-bottom:20%;
   padding-top:10%;
   padding-bottom:10%;
   border-radius: 100%;
+  font-size:40px;
 }
 
 .coverHeader, .sopHeader{
@@ -73,4 +74,32 @@ margin-bottom:20%;
   color: #4abeca;
   padding-bottom: 5%;
   font-size: 30px;
+}
+
+#butonBizeUlasM {
+
+  background-color: #ff6341;
+  color: #f1f2f2;
+  border: none;
+  outline: none;
+  border-radius: 50px;
+  padding: 10px 10px;
+  width: 100%;
+  font-size:20px;
+  margin-top:5%;
+}
+
+#butonBizeUlasM:hover {
+  color: #f1f2f2;
+  cursor: pointer;
+  text-align: center;
+  background-size: 300% 100%;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  background-image: linear-gradient(to right, #f5ce62 #fa7199, #e85a19);
+  box-shadow: 0 4px 15px 0 rgba(229, 66, 10, 0.75);
+}
+
+#butonBizeUlasM:hover:focus {
+  outline: none;
 }
