--- a/src/Components/Pages/Hizmetler/mulakatContent/MulakatDesktop.css
+++ b/src/Components/Pages/Hizmetler/mulakatContent/MulakatDesktop.css
@@ -12,7 +12,7 @@
 .akademikContentD {
   float: right;
   font-size: 20px;
-  text-align: left;
+  text-align: justify;
   background-color: #f1f2f2;
   border-radius: 20%;
   padding: 10%;
@@ -23,7 +23,7 @@
 .ikContentD {
   float: right;
   font-size: 20px;
-  text-align: left;
+  text-align: justify;
   background-color: #f1f2f2;
   border-radius: 20%;
   padding: 10%;
@@ -34,7 +34,7 @@
 
 .sektorYdContentD {
   float: left;
-  text-align: left;
+  text-align: justify;
   background-color: #f1f2f2;
   border-radius: 20%;
   padding: 10%;
@@ -46,7 +46,7 @@
 .envanterContentD {
   margin-right: 10%;
   float: left;
-  text-align: left;
+  text-align: justify;
   background-color: #f1f2f2;
   border-radius: 20%;
   padding: 10%;
@@ -111,4 +111,5 @@
   padding-top: 10%;
   padding-bottom: 10%;
   border-radius: 100%;
+  font-size:40px;
 }
