--- a/src/Components/Pages/Hizmetler/mulakatContent/MulakatMobile.css
+++ b/src/Components/Pages/Hizmetler/mulakatContent/MulakatMobile.css
@@ -14,7 +14,7 @@
 
 .akademikContentMobile {
   font-size: 20px;
-  text-align: left;
+  text-align: justify;
   background-color: #f1f2f2;
   border-radius: 20%;
   padding: 10%;
@@ -27,7 +27,7 @@
 
 .ikContentMobile {
   font-size: 20px;
-  text-align: left;
+  text-align: justify;
   background-color: #f1f2f2;
   border-radius: 20%;
   padding: 10%;
@@ -38,7 +38,7 @@
 }
 
 .sektorYdContentMobile {
-  text-align: left;
+  text-align: justify;
   background-color: #f1f2f2;
   border-radius: 20%;
   padding: 10%;
@@ -49,7 +49,7 @@
 }
 
 .envanterContentMobile {
-  text-align: left;
+  text-align: justify;
   background-color: #f1f2f2;
   border-radius: 20%;
   padding: 10%;
@@ -107,4 +107,5 @@
   padding-top: 10%;
   padding-bottom: 10%;
   border-radius: 100%;
+  font-size: 40px;
 }
