--- a/src/Components/Pages/Kurumsal/AboutContents/AboutUsMobile.css
+++ b/src/Components/Pages/Kurumsal/AboutContents/AboutUsMobile.css
@@ -13,6 +13,7 @@
 .aboutContent {
   font-size: 20px;
   margin-bottom:4%;
+  text-align: justify;
 }
 
 .fullContent {
@@ -20,8 +21,7 @@
   border-radius: 20%;
   padding: 10%;
   color: #152039;
-  margin-left: 5%;
-}
+  margin-left: 5%;}
 
 .aboutAnimationMobile {
   text-align: center;
