--- a/src/Components/Pages/Kurumsal/Ekibimiz.scss
+++ b/src/Components/Pages/Kurumsal/Ekibimiz.scss
@@ -30,6 +30,7 @@ a, a:hover {
   width:60%;
   align-items: center;
   background-color: #e1e5ea;
+  
 
 	&.light {
 		background-color: #e1e5ea;
@@ -89,7 +90,7 @@ a, a:hover {
   .postcard__preview-txt {
     overflow: hidden;
     text-overflow: ellipsis;
-    text-align: left;
+    text-align: justify;
     height: 100%;
     font-size:20px;
   }
