--- a/src/Components/Pages/HomeStyle.css
+++ b/src/Components/Pages/HomeStyle.css
@@ -1,161 +1,84 @@
 @import url("http://fonts.cdnfonts.com/css/sofia-pro");
 @import url("http://fonts.cdnfonts.com/css/montserrat");
 
-.containerHome {
+/* .containerHome {
   display: auto;
-  background: url("home_back.svg");
+  background: url("home_back.jpg");
   background-position: right 0% bottom 60%;
   background-size: 100%;
   background-repeat: no-repeat;
-  padding-top: 5%;
-  padding-bottom: 40%;
-  height: 400px;
+  padding-top: 35%;
+  padding-bottom: 10%;
+  height: 200px;
   background-color: rgba(169, 219, 207, 255);
+} */
+/*Buton section*/
+/* .button1 {
+  padding-left: 50%;
+  padding-top: 30px;
+  width: 300px;
+  height: 70px;
 }
-/* #arka {
-  margin-left: 5%;
-  margin-top: 20%;
-  font-size: 70px;
-  /* font-family: "Sofia Pro", sans-serif;*/
-/*font-family: "Montserrat", sans-serif;
+#buton {
+  color: rgba(239, 47, 61, 255);
+  width: 300px;
+  height: 70px;
 } */
 
-/* .main-title {
-  font-size: 56px;
-  line-height: 58px;
-  font-weight: 600;
-  margin: 0;
-}
-*/
-/* * {
-  padding: 0;
-  margin: 0;
+/* html {
+  font-size: 20px;
   box-sizing: border-box;
 } */
-/* HERO */
 
-#hero {
-  /* box-shadow: 0 3px 3px lightgray; */
-  top: -400px;
-  /* margin-bottom: 100px; */
-}
-
-/* .hero-img {
-  width: 44%;
-  position: relative;
-  top: 250px;
-  right: -1000px;
-} */
-
-#hero-text {
-  position: relative;
-  top: -480px;
-  left: 50px;
-  font-size: 90px;
-  font-weight: 900;
-  padding-left: 50px;
-  font-family: "Sofia Pro", sans-serif;
-  color: rgb(10, 13, 61);
-}
-.main-desc {
-  position: relative;
-  width: 520px;
-  padding-left: 110px;
-  cursor: pointer;
-  padding-bottom: 20px;
-  color: #6c5b94;
-  font-size: 30px;
-  top: -490px;
-  font-family: "Sofia Pro", sans-serif;
-}
-/*Buton section*/
-.getstarted-section {
-  position: relative;
-  padding-left: 110px;
-  top: -470px;
-  font-family: "Sofia Pro", sans-serif;
-}
-.btn-getstarted {
-  background-color: #6a7cff;
-  color: #fff;
-  padding: 16px 30px;
-  font-size: 25px;
-  font-weight: 400;
-  border-radius: 12px;
-}
-.getstarted-section:hover .btn-getstarted {
-  background-color: #4258f5;
+body {
+  /* background: url("home_back.jpg"); */
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-color: rgba(169, 219, 207, 255);
 }
 
-/* 
-================
-FEATURE SECTION 
-================
-*/
-#features {
-  background: rgba(255, 255, 255, 0);
+.bodyy {
+  padding-top: 15%;
+  padding-bottom: 10%;
+  background: transparent;
+}
+
+.button1 {
   display: flex;
-  width: 100%;
-  justify-content: space-around;
-  margin-bottom: 35px;
-  padding: 5px 0 20px 0;
-}
-.feature-box {
-  background: #fff;
-  flex-basis: 25%;
-  margin-right: 20px;
-  height: 280px;
-  border-radius: 5px;
-  box-shadow: 0 3px 3px lightgray;
+  align-items: center;
+  justify-content: center;
+  height: 50vh;
 }
 
-.feature-box h4 {
-  text-align: center;
-  font-size: 25px;
-}
-
-.feature-icon {
-  font-size: 50px;
-  margin-top: 8px;
+.rolling_tiles {
+  border: 5px #4b0082 solid;
+  color: current;
   display: block;
-  text-align: center;
+  font-family: "trebuchet ms";
+  font-size: 2rem;
+  letter-spacing: 0.1rem;
+  padding: 1rem;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
-.feature-icon i {
-  color: #4285f4;
+.rolling_tiles::before {
+  content: "";
+  background-color: #e95d00;
+  box-shadow: -10px 10px rgb(231, 150, 74), -20px 20px 0 rgb(230, 210, 30);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 4.25rem;
+  width: 102%;
+  transform: translate(-15px, 10px);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  will-change: transform, box-shadow;
+  z-index: -1;
 }
 
-#description {
-  margin-top: 10px;
-  text-align: center;
-  padding: 0 20px;
-  font-size: 20px;
-}
-
-#footer {
-  background: #152039;
-  padding: 20px 0;
-  margin-top: 40px;
-}
-/* 
-MEDIA QUERY
- */
-
-@media (max-width: 800px) {
-  .hero-img {
-    width: 33%;
-    position: relative;
-    top: 80px;
-    right: -500px;
-  }
-
-  #form,
-  #hero-text {
-    position: relative;
-    top: -100px;
-    left: 20px;
-    font-size: 30px;
-    font-weight: 100;
-    padding-left: 30px;
-  }
+.rolling_tiles:hover::before {
+  box-shadow: none;
+  transform: translate(0, 0);
 }
