--- a/src/Components/Pages/Hizmetler/egitimContent/EgitimMobile.css
+++ b/src/Components/Pages/Hizmetler/egitimContent/EgitimMobile.css
@@ -69,10 +69,10 @@ margin-bottom:5%;
 
 }
 
-.coverHeader, .sopHeader{
+.coverHeaderME, .sopHeaderME{
   text-align: center;
   align-content: center;
-  color: #4abeca;
+  color: #ff6341;
   padding-bottom: 5%;
   font-size: 30px;
 }
