--- a/src/Components/Pages/Hizmetler/motivasyonContent/MotivDesktop.css
+++ b/src/Components/Pages/Hizmetler/motivasyonContent/MotivDesktop.css
@@ -71,10 +71,10 @@ margin-bottom:30%;
   font-size:40px;
 }
 
-.coverHeader, .sopHeader{
+.coverHeaderD, .sopHeaderD{
   text-align: center;
   align-content: center;
-  color: #4abeca;
+  color: #ff6341;
   padding-bottom: 5%;
   font-size: 30px;
 }
