--- a/src/Components/Pages/Hizmetler/motivasyonContent/MotivMobile.css
+++ b/src/Components/Pages/Hizmetler/motivasyonContent/MotivMobile.css
@@ -68,10 +68,10 @@ margin-bottom:20%;
   font-size:40px;
 }
 
-.coverHeader, .sopHeader{
+.coverHeaderM, .sopHeaderM{
   text-align: center;
   align-content: center;
-  color: #4abeca;
+  color: #ff6341;
   padding-bottom: 5%;
   font-size: 30px;
 }
