--- a/src/Components/Pages/Kurumsal/AboutContents/AboutUsDesktop.css
+++ b/src/Components/Pages/Kurumsal/AboutContents/AboutUsDesktop.css
@@ -1,7 +1,7 @@
 #hakkimizdaHeader {
   text-align: center;
   align-content: center;
-  color: #4abeca;
+  color: #ff6341;
   font-size: 40px;
   padding-left:5%;
   padding-top:7%;
