--- a/src/Components/Pages/Kurumsal/DegerlerContents/ValMotMobile.css
+++ b/src/Components/Pages/Kurumsal/DegerlerContents/ValMotMobile.css
@@ -8,7 +8,7 @@
 .motivasyonHeaderMobile, .valueHeaderMobile {
     text-align: center;
     align-content: center;
-    color: #4abeca;
+    color: #ff6341;
     font-size: 40px;
     padding-left:7%;
     padding-bottom:5%;
