--- a/src/Components/Pages/Hizmetler/linkedinContent/LinkedinMobile.css
+++ b/src/Components/Pages/Hizmetler/linkedinContent/LinkedinMobile.css
@@ -1,7 +1,7 @@
 #linkedinHeader {
   text-align: center;
   align-content: center;
-  color: #4abeca;
+  color: #ff6341;
   padding-bottom: 5%;
   font-size: 30px;
 }
