--- a/src/Components/Pages/Iletisim/IletisimDesktop.css
+++ b/src/Components/Pages/Iletisim/IletisimDesktop.css
@@ -1,10 +1,12 @@
 .momDivContectDesktop{
   padding-top:15%;
   padding-bottom:3%;
+  background-color: rgba(169, 219, 207, 255);
+
 }
 
 #iletisim {
-  color: #4abeca;
+  color: #e85a19;
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -13,14 +15,21 @@
 
 }
 
-#iletisimHeader {
-  color: #4abeca;
+#iletisimHeaderD {
+  color: #ff6341;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size:40px;
+}
+
+#iletisimHeaderForm{
+  color: #ff6341;
   align-items: center;
   text-align: center;
   justify-content: center;
   font-size:30px;
 }
-
 .cerceve {
   align-items: center;
   justify-content: center;
@@ -69,7 +78,7 @@
   padding-top: 5%;
 }
 
-.kvkk {
+.kvkkIletisim {
 padding:5% 10% 5% 10%;
 color: #152039;
 text-align: center;
