--- a/src/Components/Pages/Kurumsal/DegerlerContents/ValMotDesktop.css
+++ b/src/Components/Pages/Kurumsal/DegerlerContents/ValMotDesktop.css
@@ -1,7 +1,7 @@
 #degerHeader{
   text-align: center;
   align-content: center;
-  color: #4abeca;
+  color: #ff6341;
   font-size: 40px;
   padding-top: 10%;
 }
@@ -9,7 +9,7 @@
 #motivasyonHeader {
   text-align: center;
   align-content: center;
-  color: #4abeca;
+  color: #ff6341;
   font-size: 40px;
 }
 
