--- a/src/Components/Pages/StratejikOrtaklar/OrtakDesktop.css
+++ b/src/Components/Pages/StratejikOrtaklar/OrtakDesktop.css
@@ -4,7 +4,7 @@
 }
 
 .ortakHeader {
-  color: #4abeca;
+  color: #ff6341;
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -13,7 +13,7 @@
 }
 
 .ogrenciHeader,.sirketHeader {
-  color: #4abeca;
+  color: #ff6341;
   align-items: center;
   text-align: center;
   justify-content: center;
