--- a/src/Components/Pages/StratejikOrtaklar/OrtakMobile.css
+++ b/src/Components/Pages/StratejikOrtaklar/OrtakMobile.css
@@ -102,7 +102,7 @@ img{
   padding-top:20%;
 }
 .ortakHeaderM {
-  color: #4abeca;
+  color: #ff6341;
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -111,7 +111,7 @@ img{
 }
 
 .ogrenciHeaderM,.sirketHeaderM {
-  color: #4abeca;
+  color: #ff6341;
   align-items: center;
   text-align: center;
   justify-content: center;
