--- a/src/Components/Pages/HomeStyle.css
+++ b/src/Components/Pages/HomeStyle.css
@@ -36,10 +36,7 @@ body {
   background-repeat: no-repeat;
   background-color: rgba(169, 219, 207, 255);
 }
-
 .bodyy {
-  padding-top: 15%;
-  padding-bottom: 10%;
   background: transparent;
 }
 
@@ -47,7 +44,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 50vh;
+  height: 15vh;
+}
+.ust {
+  padding-top: 0px;
+}
+.alt {
 }
 
 .rolling_tiles {
