--- a/src/Components/Pages/HomeStyle.css
+++ b/src/Components/Pages/HomeStyle.css
@@ -35,6 +35,7 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   background-color: rgba(169, 219, 207, 255);
+  /* height: 120px; */
 }
 .bodyy {
   background: transparent;
